# CoARCT

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
apps/: CMakeLists.txt  CallsiteLister.cc  FuncLister.cc  FuncListerAM.cc  FuncListerRAV.cc  FunctionMover.cc  FunctionPrinter.cc  GlobalDetect.cc  GlobalReplace.cc  ListCXXMemberCalls.cc  StructFieldUser.cc  TemplateType.cc  TemplateVarFinder.cc  TypedefFinder.cc  summarize_command_line.cc  summarize_command_line.h
doc/: Doxyfile.in
docker/: Dockerfile  test_coarct.sh
lib/: CMakeLists.txt  callsite_common.h  callsite_expander.h  callsite_lister.cc  callsite_lister.h  dump_things.cc  dump_things.h  function_common.cc  function_common.h  function_definition_lister.h  function_repl_gen.h  function_sig_matchers.h  function_signature_expander.h  global_matchers.h  global_variable_replacer.h  make_replacement.h  member_ref.h  signature_insert.cc  signature_insert.h  small_matchers.h  struct_field_user.h  template_var_matchers.h  types.h  utilities.h
test/: CMakeLists.txt
test/apps/: foo.cc.expected  foo.cc.in
test/lib/: callsite_expander_test.cc  callsite_lister_test.cc  clang_utilities_test.cc  func_matchers_test.cc  function_common_test.cc  function_def_lister_test.cc  function_sig_exp_test.cc  function_sig_matchers_test.cc  global_matchers_test.cc  match_count.h  prep_code.h  small_matchers_test.cc  struct_field_users_test.cc  template_var_matchers_test.cc  test_input_fn_call.cpp  test_input_fn_sig.cpp  test_input_glob_vars.cpp  test_input_mk_ptr_ref.cpp  test_input_namespace.cpp  test_input_ns_decl.cpp  test_input_on_lhs.cpp  test_input_part_of_assignment.cpp  test_input_person.cpp  test_input_std_function.cpp  test_input_struct_field_user.cpp  test_input_struct_field_user2.cpp  test_input_template_ctor.cpp  utilities_test.cc
tools/data-use/score/: .ghci  LICENSE  score.cabal
tools/data-use/score/src/: Cluster.hs  Diagonalize.hs
tools/data-use/score/tests/: TestSuite.hs  test-main.hs
tools/data-use/score/tests/Test/: Diagonalize_Test.hs
